Global resources changes ( http://sarek/mediawiki/index.php/Global_Resources#Part_I ). The Manager UI is updated for global resources. SchemaEntry and associated classes are replaced with the generic ResourceEntry for use by XML Schemas and DTDs. The SchemaManager is updated to pull schemas from global resources rather than to have schemas pushed from the schema entry manager and to support registration of URIs in addition to schemas to support usage checks for global (schema) resources. Policy import/export, policy migration and gateway management are updated to use/support global resources.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26887 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/common/src/main/resources/com/l7tech/EntityTypes.properties
+++ b/modules/gateway/common/src/main/resources/com/l7tech/EntityTypes.properties
@@ -12,7 +12,6 @@ SAMPLE_MESSAGE=com.l7tech.gateway.common.service.SampleMessage
 CLUSTER_PROPERTY=com.l7tech.gateway.common.cluster.ClusterProperty
 CLUSTER_INFO=com.l7tech.gateway.common.cluster.ClusterNodeInfo
 SERVICE_USAGE=com.l7tech.gateway.common.cluster.ServiceUsage
-SCHEMA_ENTRY=com.l7tech.gateway.common.schema.SchemaEntry
 METRICS_BIN=com.l7tech.gateway.common.service.MetricsBin
 RBAC_ROLE=com.l7tech.gateway.common.security.rbac.Role
 AUDIT_MESSAGE=com.l7tech.gateway.common.audit.MessageSummaryAuditRecord
@@ -31,3 +30,4 @@ UDDI_PROXIED_SERVICE_INFO=com.l7tech.gateway.common.uddi.UDDIProxiedServiceInfo
 UDDI_SERVICE_CONTROL=com.l7tech.gateway.common.uddi.UDDIServiceControl
 SECURE_PASSWORD=com.l7tech.gateway.common.security.password.SecurePassword
 HTTP_CONFIGURATION=com.l7tech.gateway.common.resources.HttpConfiguration
+RESOURCE_ENTRY=com.l7tech.gateway.common.resources.ResourceEntry
