--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/SchemaValidationPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/SchemaValidationPropertiesDialog.properties
@@ -21,6 +21,7 @@ error.badurl=This is not a well formed URL
 error.urlnocontent=No content could be retrieved at that URL
 error.noxmlaturl=Cannot parse the XML from that URL
 error.urlnoschema=The document at URL is not a schema
+error.noglobalschema=Please select a Global Schema.
 error.invalid.targetnamespace=Cannot find a targetNamespace same as a namespace {0}
 error.invalid.targetmessage=Invalid target message: {0}
 error.invalid.targetmessage.title=Invalid Target Message
