--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -830,6 +830,16 @@ schemaSoftwareFallback.default = true
 schemaSoftwareFallback.systemProperty = ${propertyPrefix}.schema.softwareFallback
 schemaSoftwareFallback.clusterProperty = schema.softwareFallback
 
+schema.hardwareTargetNamespaces.description = XML Schemas that will always be loaded to hardware, identified by their target namespace (space separated list)
+schema.hardwareTargetNamespaces.default = http://schemas.xmlsoap.org/soap/envelope/\nhttp://www.w3.org/2003/05/soap-envelope
+schema.hardwareTargetNamespaces.systemProperty = ${propertyPrefix}.schema.hardwareTargetNamespaces
+schema.hardwareTargetNamespaces.clusterProperty = schema.hardwareTargetNamespaces
+
+schema.allowDoctype.description = Allow use of a document type definition in XML Schemas (true/false)
+schema.allowDoctype.default = false
+schema.allowDoctype.systemProperty = ${propertyPrefix}.schema.allowDoctype
+schema.allowDoctype.clusterProperty = schema.allowDoctype
+
 samlBeforeOffsetMinute.description = The number of minutes (should be a positive integer) to offset the Not-Before aspect of the validity of SAML statements created by the token service
 samlBeforeOffsetMinute.default = 2
 samlBeforeOffsetMinute.clusterProperty = samlAssertion.NotBeforeOffsetMinutes
