Global resources changes, add analyze dialog and functionality.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26931 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/GlobalResourceImportWizard.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/GlobalResourceImportWizard.properties
@@ -50,7 +50,8 @@ option.MISSING_RESOURCE.SKIP = Don't import the invalid resource (and any resour
 
 # Dependency scopes
 dependencies.DIRECT = Show only direct dependencies
-dependencies.TRANSITIVE = Show all dependencies
+dependencies.TRANSITIVE = Show only transitive dependencies
+dependencies.ALL = Show all dependencies
 
 # General
 dialog.title=Resource Import Wizard
