SSM-2692: add user feedback for entering max age > 100.   Add to description box and tooltip
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26976 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
@@ -147,4 +147,5 @@ advancedConfiguration.attrs.add.title=Add Attribute
 advancedConfiguration.attrs.edit.title=Edit Attribute
 advancedConfiguration.attrs.prompt=Attribute:
 advancedConfiguration.group.caseInsensitiveMembership=&Use case insensitive group membership check
+advancedConfiguration.max.cache.age.error=Cache maximum age should not exceed 100 years.
 
