--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/GlobalResourceImportWizard.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/GlobalResourceImportWizard.properties
@@ -28,6 +28,14 @@ results-step.description = \
 
 # Import options
 choice.NONE = Ask
+option.AMBIGUOUS_TARGET_NAMESPACE = If a resource dependencies target namespace matches multiple existing XML Schemas:
+option.AMBIGUOUS_TARGET_NAMESPACE.EXISTING = Manually select an existing XML Schema
+option.AMBIGUOUS_TARGET_NAMESPACE.IMPORT = Import the XML Schema
+option.AMBIGUOUS_TARGET_NAMESPACE.SKIP = Don't import the XML Schema
+option.AMBIGUOUS_PUBLIC_ID = If a resource dependencies public identifier matches multiple existing resources:
+option.AMBIGUOUS_PUBLIC_ID.EXISTING = Manually select an existing resource
+option.AMBIGUOUS_PUBLIC_ID.IMPORT = Import the duplicate resource
+option.AMBIGUOUS_PUBLIC_ID.SKIP = Don't import the duplicate resource
 option.CONFLICTING_URI = If an imported resources system identifier conflicts with an existing system identifier:
 option.CONFLICTING_URI.EXISTING = Use the existing resource
 option.CONFLICTING_URI.UPDATE_ALL = Update the existing resource
@@ -37,7 +45,7 @@ option.CONFLICTING_TARGET_NAMESPACE.EXISTING = Use the existing XML Schema
 option.CONFLICTING_TARGET_NAMESPACE.UPDATE_CONTENT = Update the existing XML Schema (preserves the current URI)
 option.CONFLICTING_TARGET_NAMESPACE.UPDATE_ALL = Replace the existing XML Schema (uses the import URI)
 option.CONFLICTING_TARGET_NAMESPACE.IMPORT = Import the XML Schema
-option.CONFLICTING_TARGET_NAMESPACE.SKIP = Don't import the matching resource
+option.CONFLICTING_TARGET_NAMESPACE.SKIP = Don't import the matching XML Schema
 option.CONFLICTING_PUBLIC_ID = If an imported resources public identifier duplicates an existing value:
 option.CONFLICTING_PUBLIC_ID.EXISTING = Use the existing resource
 option.CONFLICTING_PUBLIC_ID.UPDATE_CONTENT = Update the existing resource (preserves the current URI)
@@ -88,4 +96,5 @@ label.uses=Uses:
 label.used-by=Used By:
 button.add-from-url=Add From &URL
 button.add-from-file=&Add From File
+label.description=Description:
 
