--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/GlobalResourcesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/GlobalResourcesDialog.properties
@@ -24,3 +24,4 @@ label.filter-status.resource=Resources of type {0}
 label.filter-status.match=Any resource matching ''{0}''
 label.filter-status.resource-match=Resources of type {0} matching ''{1}''
 button.analyze=&Analyze
+label.filtered-total=Displayed / Total Resources:
