SSM-2965: Fix for Button label correction for managing stored passwords
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26991 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/HttpProxyPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/HttpProxyPropertiesDialog.properties
@@ -5,5 +5,5 @@ host.label = &Host:
 password.label = P&assword:
 port.label = &Port:
 username.label = &Username:
-managepasswords.label=&Manage Secure Passwords...
+managepasswords.label=&Manage Stored Passwords...
 
