SSM-2957: Schema validation assertion now detected any dependency that does not resolved by URI. Importing dependencies updates any schemaLocations for schema dependencies resolved by target namespace.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26996 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/SchemaValidationPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/SchemaValidationPropertiesDialog.properties
@@ -61,7 +61,7 @@ specifyUrlItem.label = Monitor URL for latest value
 specifyUrlTextBox.description = <html>The Gateway will periodically check this URL and download the latest schema.
 specifyUrlTextBox.label = URL to monitor:
 
-globalItem.label = Pick from global schemas
+globalItem.label = Pick XML Schema from global resources
 
 urlDialog.title = Enter the URL to load the schema from:
 urlDialog.prompt = Schema URL:
