SSM-2968: updated strings
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27018 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/GlobalResourceImportWizard.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/GlobalResourceImportWizard.properties
@@ -28,25 +28,25 @@ results-step.description = \
 
 # Import options
 choice.NONE = Ask
-option.AMBIGUOUS_TARGET_NAMESPACE = If a resource dependencies target namespace matches multiple existing XML Schemas:
+option.AMBIGUOUS_TARGET_NAMESPACE = If a resource dependency's target namespace matches multiple existing XML Schemas:
 option.AMBIGUOUS_TARGET_NAMESPACE.EXISTING = Manually select an existing XML Schema
 option.AMBIGUOUS_TARGET_NAMESPACE.IMPORT = Import the XML Schema
 option.AMBIGUOUS_TARGET_NAMESPACE.SKIP = Don't import the XML Schema
-option.AMBIGUOUS_PUBLIC_ID = If a resource dependencies public identifier matches multiple existing resources:
+option.AMBIGUOUS_PUBLIC_ID = If a resource dependency's public identifier matches multiple existing resources:
 option.AMBIGUOUS_PUBLIC_ID.EXISTING = Manually select an existing resource
 option.AMBIGUOUS_PUBLIC_ID.IMPORT = Import the duplicate resource
 option.AMBIGUOUS_PUBLIC_ID.SKIP = Don't import the duplicate resource
-option.CONFLICTING_URI = If an imported resources system identifier conflicts with an existing system identifier:
+option.CONFLICTING_URI = If an imported resource's system identifier conflicts with an existing system identifier:
 option.CONFLICTING_URI.EXISTING = Use the existing resource
 option.CONFLICTING_URI.UPDATE_ALL = Update the existing resource
 option.CONFLICTING_URI.SKIP = Don't import the conflicting resource
-option.CONFLICTING_TARGET_NAMESPACE = If an imported XML Schemas target namespace matches an existing value:
+option.CONFLICTING_TARGET_NAMESPACE = If an imported XML Schema's target namespace matches an existing value:
 option.CONFLICTING_TARGET_NAMESPACE.EXISTING = Use the existing XML Schema
 option.CONFLICTING_TARGET_NAMESPACE.UPDATE_CONTENT = Update the existing XML Schema (preserves the current URI)
 option.CONFLICTING_TARGET_NAMESPACE.UPDATE_ALL = Replace the existing XML Schema (uses the import URI)
 option.CONFLICTING_TARGET_NAMESPACE.IMPORT = Import the XML Schema
 option.CONFLICTING_TARGET_NAMESPACE.SKIP = Don't import the matching XML Schema
-option.CONFLICTING_PUBLIC_ID = If an imported resources public identifier duplicates an existing value:
+option.CONFLICTING_PUBLIC_ID = If an imported resource's public identifier duplicates an existing value:
 option.CONFLICTING_PUBLIC_ID.EXISTING = Use the existing resource
 option.CONFLICTING_PUBLIC_ID.UPDATE_CONTENT = Update the existing resource (preserves the current URI)
 option.CONFLICTING_PUBLIC_ID.UPDATE_ALL = Replace the existing resource (uses the import URI)
@@ -81,7 +81,7 @@ label.pattern=&Pattern:
 label.type=&Type:
 button.select=&Select
 button.find=&Find
-label.process-subdirectories=Process subdirectories?
+label.process-subdirectories=Include subdirectories
 summary.title=Import Summary
 button.view=&View
 button.update=&Update
