bug 9247: Added new admin methods to query the current default SSL and CA key without having to look at the cluster properties, and to check whether the CA or SSL key is read-only on the current system.  When the CA or SSL key can't be changed, the corresponding button is disabled with a tooltip explaining why.
Removed unused importKey (from PKCS#8) method in TrustedCertAdmin.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27036 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -931,12 +931,14 @@ keyStoreDefaultSslKey.description = Keystore ID and alias of default SSL key, co
 keyStoreDefaultSslKey.default = -1:SSL
 keyStoreDefaultSslKey.clusterProperty = keyStore.defaultSsl.alias
 keyStoreDefaultSslKey.systemProperty = ${propertyPrefix}.keyStore.defaultSsl.alias
+keyStoreDefaultSslKey.setSystemProperty = false
 keyStoreDefaultSslKey.visible = false
 
 keyStoreDefaultCaKey.description = Keystore ID and alias of default CA key, colon delimited.  A keystore ID of -1 means "unspecified".
 keyStoreDefaultCaKey.default = -1:CA
 keyStoreDefaultCaKey.clusterProperty = keyStore.defaultCa.alias
 keyStoreDefaultCaKey.systemProperty = ${propertyPrefix}.keyStore.defaultCa.alias
+keyStoreDefaultCaKey.setSystemProeprty = false
 keyStoreDefaultCaKey.visible = false
 
 keyStoreSearchForAlias.description = If a key alias isn't found in the expected keystore, search all other keystores as well (true/false)
