bug 8709: Replaced most "127.0.0.1" and "0.0.0.0" string occurences with calls to utility method that returns the localhost/any address based on the preferred IP protocol.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27043 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/config/ivy.xml
+++ b/modules/config/ivy.xml
@@ -22,6 +22,7 @@
     </publications>
     <dependencies>
         <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
+        <dependency name="layer7-common" rev="latest.integration" force="true" conf="core"/>
 
         <dependency org="commons-configuration" name="commons-configuration" rev="1.6" force="true" conf="core">
             <exclude org="commons-digester" module="commons-digester" name="*" type="*" ext="*" conf=""
