SSM-2968: Move the subdirectory check box.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27068 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/GlobalResourceImportWizard.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/GlobalResourceImportWizard.properties
@@ -81,7 +81,7 @@ label.pattern=&Pattern:
 label.type=&Type:
 button.select=&Select
 button.find=&Find
-label.process-subdirectories=Include subdirectories
+label.process-subdirectories=&Include subdirectories
 summary.title=Import Summary
 button.view=&View
 button.update=&Update
