bug 8709: Appliance RPM updates mysql configuration to support mysql-cluster, the new mysql bundled with the appliance.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27089 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/db/mysql/my.cnf
+++ b/etc/db/mysql/my.cnf
@@ -1,6 +1,5 @@
 [mysqld]
 # The default character set is utf8
-default-character-set=utf8
 character-set-server=utf8
 
 datadir=/var/lib/mysql
@@ -38,8 +37,7 @@ transaction-isolation=READ-COMMITTED
 max_connect_errors=2000000
 max_allowed_packet=32M
 interactive_timeout=864000
-log-slow-queries
-log-long-format
+slow_query_log=1
 
 # Uncommment log-bin and log-slave-update if a clustered
 # db server
@@ -67,9 +65,8 @@ slave-net-timeout=30
 # expire_logs_days=62
 
 [mysql.server]
-bind-address=0.0.0.0
 user=mysql
-basedir=/var/lib
+basedir=/usr
 
 [safe_mysqld]
 err-log=/var/log/mysqld.log
