--- a/modules/gateway/gateway-management-client/ivy.xml
+++ b/modules/gateway/gateway-management-client/ivy.xml
@@ -22,6 +22,7 @@
         <artifact name="layer7-gateway-management-client" type="jar" ext="jar" conf="master"/>
     </publications>
     <dependencies>
+        <dependency name="layer7-common" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-gateway-api" rev="latest.integration" force="true" conf="core"/>
 
