bug 9390: Updated ESM to report and display the correct IPv6 address used for its HTTPS listener.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27115 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/resources/emconfig.properties
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/resources/emconfig.properties
@@ -62,7 +62,7 @@ em.server.listenportdev.description = The HTTP listener port
 em.server.listenportdev.default = 8181
 
 em.server.listenaddr.description = The listener IP address
-em.server.listenaddr.default = 0.0.0.0
+em.server.listenaddr.default = *
 em.server.listenaddr.mutable = true
 
 em.server.session.timeout.description = Session timeout (timeunit)
