SSM-2962: Fix for Global Resources: Document that Matches field in the filter frame requires regex
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27135 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/GlobalResourcesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/GlobalResourcesDialog.properties
@@ -25,3 +25,4 @@ label.filter-status.match=Any resource matching ''{0}''
 label.filter-status.resource-match=Resources of type {0} matching ''{1}''
 button.analyze=&Analyze
 label.filtered-total=Displayed / Total Resources:
+tooltip.matches=A regular expression resources must match
