SSM-3011: fixed by validating the tModelKey, keyName and keyValue before the dialog dismisses.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27142 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/KeyedReferenceDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/KeyedReferenceDialog.properties
@@ -5,4 +5,7 @@ keyValue=keyValue:
 keyName=keyName:
 duplicate.error.msg=KeyedReference already exists. (tModelKey and keyValue must be unique).
 tmodelkey.is.required=tModelKey is required
+tmodelKey.invalid=tModelKey is not a valid URI
 keyvalue.is.required=keyValue is required
+field.maxLength={0} cannot be greater than 255 characters. It is {1} characters in length.
+keyName.required=A value for keyName is required when the tModelKey represents a general keywords reference.
