--- a/build.xml
+++ b/build.xml
@@ -2318,6 +2318,15 @@
             </manifest>
         </jar>
 
+        <jar jarfile="${build.dir}/configwizard/ConfigClusterAddress.jar">
+            <manifest>
+                <attribute name="Main-Class" value="com.l7tech.util.ApplicationLauncher"/>
+                <attribute name="Class-Path" value="../runtime/lib/layer7-utility-${module.utility.version}.jar"/>
+                <attribute name="X-Layer7-Jar" value="../runtime/lib/layer7-gateway-config-${module.gateway.config.version}.jar"/>
+                <attribute name="X-Layer7-Main-Class" value="com.l7tech.gateway.config.manager.ClusterAddressConfig"/>
+            </manifest>
+        </jar>
+
         <jar jarfile="${build.dir}/configwizard/ConfigKeystoreFileProperty.jar">
             <manifest>
                 <attribute name="Main-Class" value="com.l7tech.util.ApplicationLauncher"/>
