SSM-2937: The certificate manager window now properly handles the case where a trusted certificate has disappeared from the Gateway in between when the certificate manager window is opened and the properties button is pressed.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27191 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/CertificateDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/CertificateDialog.properties
@@ -103,7 +103,8 @@ cert.constraint.error=<html>The certificate is in use and cannot be deleted.</ht
 ## Load
 load.error.title=Load Certificate Error
 cert.load.error=Unable to load certificate information from the server.
-cert.find.error=Unable to find the trusted certifitcate from the server.
+cert.find.error=Unable to find the trusted certificate from the server.
+cert.deleted.error=This trusted certificate no longer exists on the server.
 cert.encode.error=The certificate cannot be serialized. You may not be able to save the certificate in the certificate store.
 cert.decode.error=<html>An internal error was encountered in Policy Manager while decoding the certificate.
 
