Add JMS topic support for the legacy endpoint listener and add a hidden cluster property to configure use of the legacy listener. Clean up casting of JMS objects from JNDI and producer/consumer creation and remove unused classes.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27204 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -591,12 +591,17 @@ ioJmsConnectionCacheSize.description = The number of JMS connections to cache, t
 ioJmsConnectionCacheSize.default = 100
 ioJmsConnectionCacheSize.clusterProperty = io.jmsConnectionCacheMaxSize
 
+ioJmsEndpointListenerFactory.description = The endpoint listener type to use (Simple|Pooled)
+ioJmsEndpointListenerFactory.default = Pooled
+ioJmsEndpointListenerFactory.clusterProperty = io.jmsEndpointListenerFactory
+ioJmsEndpointListenerFactory.visible = false
+
 ioStaleCheckCount.description = Number of stale checked connections per interval (Integer)
 ioStaleCheckCount.default = 1
 ioStaleCheckCount.systemProperty = com.l7tech.common.http.prov.apache.CommonsHttpClient.staleCheckCount
 ioStaleCheckCount.clusterProperty = io.staleCheckCount
 
-ioStaleCheckHosts.description = Maximum mumber of stale checked hosts (Integer)
+ioStaleCheckHosts.description = Maximum number of stale checked hosts (Integer)
 ioStaleCheckHosts.default = 10
 ioStaleCheckHosts.systemProperty = com.l7tech.common.http.prov.apache.CommonsHttpClient.staleCheckHosts
 ioStaleCheckHosts.clusterProperty = io.staleCheckHosts
