SSM-2948: CommonsHttpClient now rejects non HTTP(S) URLs. HTTP Routing, JSON Schema Validation, XML Schema Validation, XSL-Transform and XACML PDP assertions are updated to check for HTTP(S) URLs.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27218 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/SchemaValidationPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/SchemaValidationPropertiesDialog.properties
@@ -17,7 +17,7 @@ error.nowsdl=WSDL is not present.
 error.incorrect.wsdl.types=Invalid WSDL with incorrect element wsdl:types
 error.noschemainwsdl=This WSDL does not contain a schema for validation.
 error.nourl=Please provide a valid URL.
-error.badurl=This is not a well formed URL
+error.badurl=This is not a well formed HTTP(S) URL
 error.urlnocontent=No content could be retrieved at that URL
 error.noxmlaturl=Cannot parse the XML from that URL
 error.urlnoschema=The document at URL is not a schema
