SSG-4237: HTTP / Bridge Routing assertions now support configuration of the maximum number of request retries.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27230 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/HttpRoutingAssertionDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/HttpRoutingAssertionDialog.properties
@@ -5,6 +5,7 @@ cookiePolicyCheckbox.text = Enable HTTP Cookies
 timeoutConnectLabel.text = Connection Timeout (in seconds):
 timeoutLabel.text = Read Timeout (in seconds):
 timeoutRadioDefaultLabel.text = Use System Default
+retries.label=Maximum Retries:
 authPanel.title = Service Authentication
 
 authNoneRadio.text = None (&Anonymous)
