bug 8709: Added IPv6 firewall support. Similar rules with the ones for IPv4, but not statefull (no IPv6 connection tracking module in the kernel shipped with RHEL5).
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27253 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -2935,6 +2935,7 @@
             <mkdir dir="@{dir}/${install.src.app.bin}" />
             <mkdir dir="@{dir}/${install.src.app.etc}" />
             <mkdir dir="@{dir}/${install.src.app.firewall}" />
+            <mkdir dir="@{dir}/${install.src.app.firewall6}" />
             <mkdir dir="@{dir}/${install.src.app.backuprestore.cfg}"/>
             <mkdir dir="@{dir}/${install.src.app.libexec}"/>
             <mkdir dir="@{dir}/${install.src.app.ssgconfig}"/>
@@ -2965,6 +2966,7 @@
             <copy file="${src.root}/etc/appliance/ssgenv.sh" tofile="@{dir}/etc/profile.d/ssgenv.sh"/>
             <copy file="${src.root}/etc/appliance/snmpd.conf" tofile="@{dir}/etc/snmp/snmpd.conf_example"/>
             <copy file="${src.root}/etc/appliance/iptables" tofile="@{dir}/etc/sysconfig/iptables"/>
+            <copy file="${src.root}/etc/appliance/ip6tables" tofile="@{dir}/etc/sysconfig/ip6tables"/>
             <copy file="${src.root}/etc/appliance/configuser_profile" tofile="@{dir}/${install.src.app.ssgconfig}/.bash_profile"/>
 
             <copy todir="@{dir}/${install.src.app.libexec}">
