SSG-4316: Fix for Gateway Mgmt Client overwrites files without warning with -outFile.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27278 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/gateway-management-client/src/main/resources/com/l7tech/gateway/client/GatewayManagementClient.properties
+++ b/modules/gateway/gateway-management-client/src/main/resources/com/l7tech/gateway/client/GatewayManagementClient.properties
@@ -79,6 +79,8 @@ help.types=\
   \tresourceDocument   : XML Schema repository.\n\
 
 help.common=\
+    To prevent overwriting existing files use the '-safe' option.\n\
+    \n\
     Credentials can be given using the '-username' and '-password' or\n\
     '-passwordFile' options.\n\
     \n\
