SSM-2948: Use distinct error messages for HTTP(S) and generic URL validation.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27279 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/JSONSchemaAssertion/src/main/resources/com/l7tech/external/assertions/jsonschema/console/JSONSchemaPropertiesDialog.properties
+++ b/modules/gateway/assertions/JSONSchemaAssertion/src/main/resources/com/l7tech/external/assertions/jsonschema/console/JSONSchemaPropertiesDialog.properties
@@ -17,7 +17,8 @@ fetchRegexList.examples.label = <html>Examples:<ul><li>http://.*<li>https://[a-z
 noUrlFoundCheckbox.text=Skip validation when no Schema URL is found
 
 error.nourl=Please provide a valid URL.
-error.badurl=This is not a well formed HTTP(S) URL.
+error.badurl=This is not a well formed URL.
+error.badhttpurl=This is not a well formed HTTP(S) URL.
 
 fetchUrlTextBox.description = <html>The Gateway will periodically check this URL and download the latest schema.
 fetchUrlTextBox.label = URL to monitor:
