--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/XslTransformationPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/XslTransformationPropertiesDialog.properties
@@ -12,7 +12,8 @@ error.window.title=XSL Transformation Error
 #########
 # error messages
 error.nourl=Please provide a valid URL.
-error.badurl=This is not a well formed HTTP(S) URL.
+error.badurl=This is not a well formed URL.
+error.badhttpurl=This is not a well formed HTTP(S) URL.
 error.urlnocontent=No content could be retrieved at URL
 error.noxmlaturl=Cannot parse the XML from that URL.
 error.notxslt=The XSL is missing or invalid.
