SSG-4332: Fix for Warning logged for com.l7tech.server.pkix.crlMaxSize
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27304 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -915,6 +915,11 @@ pkixCRL.maxExpiryAge.description = Maximum allowed value for CRL expiry age (tim
 pkixCRL.maxExpiryAge.default = 7d
 pkixCRL.maxExpiryAge.clusterProperty = pkix.crl.maxExpiryAge
 
+pkixCRL.maxSize.description = Maximum size in bytes for a CRL, or 0 for unlimited (Integer).
+pkixCRL.maxSize.default = 1048576
+pkixCRL.maxSize.clusterProperty = pkix.crl.maxSize
+pkixCRL.maxSize.systemProperty = ${propertyPrefix}.pkix.crlMaxSize
+
 pkixOCSP.expiry.description = Default setting for OCSP response expiry age (timeunit)
 pkixOCSP.expiry.default = 1m
 pkixOCSP.expiry.clusterProperty = pkix.ocsp.defaultExpiryAge
