--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/CancelSecurityContextPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/CancelSecurityContextPropertiesDialog.properties
@@ -1,7 +1,6 @@
 # Resource bundle for CancelSecurityContextPropertiesDialog
 
-label.fail-session-not-found=&Fail if the secure conversation session does not exist
-label.fail-session-expired=Fail if the secure conversation session is &expired
+label.fail-session-not-found=&Fail if the context is not found or has expired.
 label.permit-when=&Permit cancellation
 
 permit-cancellation.NONE = always
