SSG-4381: Add "pkix.permittedCriticalExtensions" cluster property for configuration of permitted (ignored) critical extensions. Updated certificate validation processor to give a more detailed reason for a path build failure.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27451 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -889,6 +889,10 @@ pkixTrust.useDefaultAnchors.description = Should well known Certificate Authorit
 pkixTrust.useDefaultAnchors.default = true
 pkixTrust.useDefaultAnchors.clusterProperty = pkix.useDefaultTrustAnchors
 
+pkixTrust.permittedCriticalExtensions.description = List of critical extensions that should be permitted when validating certificates (space separated list of OIDs)
+pkixTrust.permittedCriticalExtensions.default = 
+pkixTrust.permittedCriticalExtensions.clusterProperty = pkix.permittedCriticalExtensions
+
 pkixCRL.expiry.description = Default setting for CRL expiry age (timeunit)
 pkixCRL.expiry.default = 1h
 pkixCRL.expiry.clusterProperty = pkix.crl.defaultExpiryAge
