SSM-2732: Fix for Policy import for JDBC connection should support remove/ignore options.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27485 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/ResolveJdbcConnectionPanel.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/ResolveJdbcConnectionPanel.properties
@@ -3,6 +3,15 @@
 panel.title.custom.jdbc.conn=Custom JDBC Connection
 
 label.connection=Connection:
-label.unresolved.jdbc.conn=Unresolved JDBC Connection, {0}
+label.unresolved.jdbc.conn=Unresolved JDBC Connection {0}
 
-button.manage.jdbc.conns=Manage JDBC Connections
+button.manage.jdbc.conns=Create JDBC Connection
+title.details=Missing JDBC Connection Details
+title.missing=Policy contains assertions that refer to an unknown JDBC Connection
+title.action=Action
+action.change=Change assertions to use this JDBC Connection:
+action.ignore=Import erroneous assertions as-is
+action.remove=Remove assertions that refer to the missing JDBC Connection
+label.name=Name
+label.driver-class=Driver Class
+label.jdbc-url=JDBC URL
