Updates to Add WS-Addressing assertion following QA and subsequent Dev review of http://sarek/mediawiki/index.php?title=Outbound_WS-Addressing. Includes test coverage for func spec use cases. Small refactor in SoapUtil, getOperation has been renamed to getBindingAndOperation and also takes an optional soap version parameter and now returns a pair. Updated usages and added test coverage for soap version.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27494 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/WsAddressingAssertion/src/main/resources/com/l7tech/external/assertions/wsaddressing/console/AddWsAddressingPropertiesDialog.properties
+++ b/modules/gateway/assertions/WsAddressingAssertion/src/main/resources/com/l7tech/external/assertions/wsaddressing/console/AddWsAddressingPropertiesDialog.properties
@@ -11,3 +11,4 @@ msgAddressingProps=Message Addressing Properties
 wsAddSettings=WS-Addressing Settings
 relatesToUrlLabel=URL:
 relatesToMessageId=MessageID:
+variablePrefix=&Variable Prefix:
