SSM-3087: Fix for Outdated label in assertion properties ("Gateway Certificate Inclusion")
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27517 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/AddWssSecurityTokenDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/AddWssSecurityTokenDialog.properties
@@ -1,4 +1,4 @@
-certGroup.title=Gateway Certificate Inclusion
+certGroup.title=Signature Key Reference
 bstRadio.text=&BinarySecurityToken
 strRadio.text=&SecurityTokenReference with SKI
 bstRadio.tooltip=Include the entire Gateway certificate (larger message, best compatibility)
