--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/AddWssTimestampDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/AddWssTimestampDialog.properties
@@ -1,6 +1,6 @@
 expiryTimeLabel.text=&Expiry Time:
 signatureRequiredLabel.text=Sign &Timestamp
-certGroup.title=Gateway Certificate Inclusion
+certGroup.title=Signature Key Reference
 bstRadio.text=&BinarySecurityToken
 strRadio.text=&SecurityTokenReference with SKI
 bstRadio.tooltip=Include the entire Gateway certificate (larger message, best compatibility)
