Outbound Secure Conversation Progress: initial implementation to lookup, establish, and cancel outbound secure conversation.
This is done by refactoring SecureConversationContextManager, which is split into two new subclasses, InboundSecureconversationContextManger and OutboundSecureConversationContextManager.

Two new cluster properties are introduced, "outbound.secureConversation.defaultSessionDuration" and "outbound.secureConversation.maxSessions".

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27542 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1250,6 +1250,14 @@ wss.secureConversation.maxSessions.description=The maximum number of WS-SecureCo
 wss.secureConversation.maxSessions.default=10000
 wss.secureConversation.maxSessions.clusterProperty=wss.secureConversation.maxSessions
 
+outbound.secureConversation.defaultSessionDuration.description=The default duration for Outbound WS-SecureConversation sessions (timeunit)
+outbound.secureConversation.defaultSessionDuration.default=2h
+outbound.secureConversation.defaultSessionDuration.clusterProperty=outbound.secureConversation.defaultSessionDuration
+
+outbound.secureConversation.maxSessions.description=The maximum number of Outbound WS-SecureConversation sessions.
+outbound.secureConversation.maxSessions.default=10000
+outbound.secureConversation.maxSessions.clusterProperty=outbound.secureConversation.maxSessions
+
 wss.decorator.mustUnderstand.description=Whether Security headers should be generated with mustUnderstand asserted (true/false; default true)
 wss.decorator.mustUnderstand.default=true
 wss.decorator.mustUnderstand.systemProperty=com.l7tech.common.security.xml.decorator.secHdrMustUnderstand
