Update the "Cancel Security Context" assertion for Outbound Secure Conversation feature ( http://sarek.l7tech.com/mediawiki/index.php/Outbound_Secure_Conversation )
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27544 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/CancelSecurityContextPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/CancelSecurityContextPropertiesDialog.properties
@@ -1,8 +1,11 @@
 # Resource bundle for CancelSecurityContextPropertiesDialog
 
-label.fail-session-not-found=&Fail if the context is not found or has expired.
-label.permit-when=&Permit cancellation
-
 permit-cancellation.NONE = always
 permit-cancellation.USER = when the token is owned by an authenticated user
 permit-cancellation.TOKEN = when the token was used to authenticate
+
+label.fail-session-not-found=&Fail if the context is not found or has expired.
+label.permit-when=&Permit cancellation
+label.cancel-inbound=&Inbound Secure Conversation Session
+label.cancel-outbound=O&utbound Secure Conversation Session
+label.service-url=&Service URL:
