Validated an outbound secure conversation against "Maximum Expiry Period" and a new cluster property, "outbound.secureConversationSession.preExpiryAge" in Server Establish Outbound Secure Conversation Assertion.  Also, added more tests to test the session validation for Server Establish Outbound Secure Conversation Assertion.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27600 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1258,6 +1258,10 @@ outbound.secureConversation.maxSessions.description=The maximum number of Outbou
 outbound.secureConversation.maxSessions.default=10000
 outbound.secureConversation.maxSessions.clusterProperty=outbound.secureConversation.maxSessions
 
+outbound.secureConversationSession.preExpiryAge.description=The pre-expiry age (timeunit) for outbound secure conversation sessions.
+outbound.secureConversationSession.preExpiryAge.default=1m
+outbound.secureConversationSession.preExpiryAge.clusterProperty=outbound.secureConversationSession.preExpiryAge
+
 wss.decorator.mustUnderstand.description=Whether Security headers should be generated with mustUnderstand asserted (true/false; default true)
 wss.decorator.mustUnderstand.default=true
 wss.decorator.mustUnderstand.systemProperty=com.l7tech.common.security.xml.decorator.secHdrMustUnderstand
