--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1258,9 +1258,9 @@ outbound.secureConversation.maxSessions.description=The maximum number of Outbou
 outbound.secureConversation.maxSessions.default=10000
 outbound.secureConversation.maxSessions.clusterProperty=outbound.secureConversation.maxSessions
 
-outbound.secureConversationSession.preExpiryAge.description=The pre-expiry age (timeunit) for outbound secure conversation sessions.
-outbound.secureConversationSession.preExpiryAge.default=1m
-outbound.secureConversationSession.preExpiryAge.clusterProperty=outbound.secureConversationSession.preExpiryAge
+outbound.secureConversation.sessionPreExpiryAge.description=The pre-expiry age (timeunit; default 1 minute) for outbound secure conversation sessions.
+outbound.secureConversation.sessionPreExpiryAge.default=1m
+outbound.secureConversation.sessionPreExpiryAge.clusterProperty=outbound.secureConversation.sessionPreExpiryAge
 
 wss.decorator.mustUnderstand.description=Whether Security headers should be generated with mustUnderstand asserted (true/false; default true)
 wss.decorator.mustUnderstand.default=true
