Configurable service resolution as per http://sarek.l7tech.com/mediawiki/index.php/Configurable_Service_Resolution . The service resolution table is removed, conflicts are now detected by the service cache via the service resolution manager. Service resolution using specified parameters can now be performed using the service cache. The service resolution code has been removed from the WSDL proxy.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27630 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/common/src/main/resources/com/l7tech/EntityTypes.properties
+++ b/modules/gateway/common/src/main/resources/com/l7tech/EntityTypes.properties
@@ -31,3 +31,4 @@ UDDI_SERVICE_CONTROL=com.l7tech.gateway.common.uddi.UDDIServiceControl
 SECURE_PASSWORD=com.l7tech.gateway.common.security.password.SecurePassword
 HTTP_CONFIGURATION=com.l7tech.gateway.common.resources.HttpConfiguration
 RESOURCE_ENTRY=com.l7tech.gateway.common.resources.ResourceEntry
+RESOLUTION_CONFIGURATION=com.l7tech.gateway.common.transport.ResolutionConfiguration
