bug 9692:  The "Add Security Token" assertion, when adding a SAML token, now accepts only the name of a context variable expected to hold the SAML assertion (String, Document or Element value), rather than accepting a free-form template field.  At runtime, if the context variable does not exist, a NO_SUCH_VARIABLE_WARNING detail message will be logged without any stack trace.
The TargetVariablePanel can now be told whether the variable in question will be read, written, or both, and will attempt to adjust its validation behavior accordingly.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27644 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/TargetVariablePanel.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/TargetVariablePanel.properties
@@ -4,3 +4,4 @@ ok.built.in.settable=OK (Built-in, settable)
 built.in.not.settable=Built-in, not settable
 ok.prefix=OK (New Prefix)
 invalid.syntax=Invalid Syntax
+invalid.notfound=No such variable
