bug 9689: Fixed by validating the creation time and the expiration time in UTC format in the assertion properties dialog of "Establish Outbound Secure Conversation".  Any invalid non-UTC time strings except a context variable used will cause the OK button to be disabled.
In order to remind the user to input a UTC time in the both time text fields, "(UTC)" is appended at the end of the labels, "Creation Time" and "Expiration Time" in the dialog.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27681 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog.properties
@@ -6,6 +6,6 @@ label.client-entropy=Client &Entropy:
 label.server-entropy=Server E&ntropy:
 label.key-size=&Key Size:
 label.shared-secret=S&hared Secret:
-label.creation-time=C&reation Time:
-label.expiry-time=E&xpiration Time:
+label.creation-time=C&reation Time (UTC):
+label.expiry-time=E&xpiration Time (UTC):
 label.maximum-expiry=Maximum Expiry &Period:
