SSG-4407: The Build RST SOAP Request assertion now supports Cancel and Validate requests.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27697 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/BuildRstSoapRequestPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/BuildRstSoapRequestPropertiesDialog.properties
@@ -11,3 +11,5 @@ label.token-lifetime=Token &Lifetime:
 label.use-system-default=Use System Default
 label.include-client-entropy=&Generate and include client entropy
 title.details=Request Details
+label.request-type=&Request Type:
+label.cancel-target=Target Token Variable:
