--- a/modules/utility/ivy.xml
+++ b/modules/utility/ivy.xml
@@ -24,6 +24,7 @@
         <artifact name="layer7-utility-test" type="jar" ext="jar" conf="test"/>
     </publications>
     <dependencies>
+        <dependency name="layer7-test" rev="latest.integration" force="true" conf="test"/>
         <dependency org="log4j" name="log4j" rev="1.2.16" force="true" conf="optional"/>
         <dependency org="javax.xml.soap" name="saaj-api" rev="1.3.1" force="true" conf="core"/>
         <dependency org="commons-codec" name="commons-codec" rev="1.4" force="true" conf="core"/>
