SSG-4481: The "Add or Remove WS-Security" assertion now has an option to clear pending WS-Security decorations.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27743 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/WsSecurityPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/WsSecurityPropertiesDialog.properties
@@ -20,3 +20,4 @@ chooseRecipient.label = Select the default recipient certificate for use with XM
 certName.label = Name:
 certSubject.label = Subject:
 certIssuer.label = Issued By:
+clearSecurity.label = C&lear WS-Security
