--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1275,6 +1275,11 @@ wss.processor.strictSignatureConfirmationValidation.description = Strict enforce
 wss.processor.strictSignatureConfirmationValidation.default = true
 wss.processor.strictSignatureConfirmationValidation.clusterProperty = wss.processor.strictSignatureConfirmationValidation
 
+wss.processor.enableDeferredRequestProcessing.description = Allow deferred WS-Security processing of the request message (true/false; default true)
+wss.processor.enableDeferredRequestProcessing.default = true
+wss.processor.enableDeferredRequestProcessing.visible = false
+wss.processor.enableDeferredRequestProcessing.clusterProperty = wss.processor.enableDeferredRequestProcessing
+
 wss.decorator.digsig.messagedigest.description=Specify the default digital signature message digest algorithm used by the WSS decorator and the non-SOAP sign XML element assertion (SHA-1, SHA-256, SHA-384, or SHA-512; default SHA-1)
 wss.decorator.digsig.messagedigest.default=SHA-1
 wss.decorator.digsig.messagedigest.clusterProperty=wss.decorator.digsig.messagedigest
