--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog.properties
@@ -4,7 +4,7 @@ label.service-url=&Service URL:
 label.token-variable=Security Context &Token (Variable Name):
 label.client-entropy=Client &Entropy:
 label.server-entropy=Server E&ntropy:
-label.key-size=&Key Size:
+label.key-size=&Key Size (bits):
 label.shared-secret=S&hared Secret:
 label.creation-time=C&reation Time:
 label.expiry-time=E&xpiration Time:
